feat: add exam apis
